# sdso_map

./: .gitignore  CMakeLists.txt  calcErrorForStereoLambda.m  cpFilesForStereoLambda.m  drawAssistFeatureTracking.m  drawDposAndAvgidpeth.m  drawPose.m  drawPoseForStereoLambda.m  drawRunTime.m  drawTImeAndPoints.m  phi2rotation.m  run.sh  run_devon.sh  run_dso.sh  run_kitti.sh  run_ros.sh  sjtu_voc_step0.sh  sjtu_voc_step1.sh  voc_step0.sh  voc_step1.sh
config/: devonIsland_calib.xml  devonIsland_setting.xml  euroc_calib.xml  euroc_setting.xml  kitti_calib_00-02.xml  kitti_calib_03.xml  kitti_calib_04-12.xml  kitti_setting.xml  setting.xml  zed_calib.xml  zed_setting.xml
src/: cgdso_kitti.cpp  cgdso_ros.cpp  main_cgdso.cpp
src/ExtraImgProcess/: ASiftDetector.cpp  ASiftDetector.h  BoostArchiver.h  KF.cpp  KF.h  decompHomgraphy.h  decompHomography.cpp  drawMatches.cpp  drawMatches.h  imageMatch.cpp  imageMatch.h  loopClosing.cpp  loopClosing.h  map.cpp  map.h
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector2.cpp  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.h  CeresOpt.cpp  CeresOpt.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  Rank1FactorizationOpt.cpp  Rank1FactorizationOpt.h
src/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  integration_base.h  settings.cpp  settings.h
